# customer_portal

./: .env  .gitignore  Dockerfile  pyproject.toml  task.txt  views.py  Приклад.xls
apps/: constants.py  sheet_config.py
apps/accounts/: admin.py  context_processors.py  decorators.py  forms.py  managers.py  mixins.py  models.py  roles.py  urls.py  views.py
apps/api/: urls.py
apps/core/: admin.py  context_processors.py  middleware.py  models.py  urls.py  views.py
apps/customers/: admin.py  models.py  selectors.py
apps/integrations/: google_colors.py  google_sheets.py  google_sheets_core.py  pricing_config.py  roller_pricing_logic.py
apps/middleware/: request_logging.py
apps/orders/: _item_template.html  admin.py  context_processors.py  forms.py  models.py  roller_pricing.py  services_currency.py  urls.py  utils_components.py  views.py
cache/: fabric_colors_cache.json
compose/dev/: docker-compose.yml  env.dev
config/: settings.py  urls.py
customer_portal.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
logs/: views.py
media/order_exports/: order_100.xlsx  order_101.xlsx  order_103.xlsx  order_114.xlsx  order_115.xlsx  order_117.xlsx  order_121.xlsx  order_122.xlsx  order_123.xlsx  order_19.xlsx  order_19_bFzlYTP.xlsx  order_20.xlsx  order_20_VvtTlbB.xlsx  order_20_WaztCxX.xlsx  order_21.xlsx  order_23.xlsx  order_24.xlsx  order_24_ZDhAl97.xlsx  order_25.xlsx  order_25_5JrgvU3.xlsx  order_25_NkT5h53.xlsx  order_25_hObqn3z.xlsx  order_25_yGqz3aH.xlsx  order_26.xlsx  order_26_g31z2nP.xlsx  order_26_lGB7RB1.xlsx  order_26_vfJdfHs.xlsx  (+57 more)
tmp/: temp.py
(+117 files in other folders)
